Ensure '+ Add Property' button is visible in editing mode (#50)
* Ensure '+ Add Property' button is visible. Addresses issue in which the button is never visible when no file properties already exist on currently viewed file.

* Only hide 'Add properties' in reading view

---------

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1603,7 +1603,7 @@ body:not(.is-mobile) {
     cursor: pointer;
   }
 
-  .metadata-container:not(:hover) .metadata-add-button {
+  .markdown-reading-view .metadata-container:not(:hover) .metadata-add-button {
     visibility: hidden;
     opacity: 0;
     height: 0;
